Migrate to AndroidX

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,7 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # don't touch it!
 GOOGLE_MAPS_API_KEY=AIzaSyD5rIOFEwA0H4CBsai-fKb8u0x5gnbj3ww
+android.useAndroidX=true
+android.enableJetifier=true
 
 
