--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MyToolbarTheme"
+        android:theme="@style/MyTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
         <meta-data
@@ -38,10 +38,12 @@
         </activity>
 
         <activity
-            android:name=".activities.MapActivity" />
+            android:name=".activities.MapActivity"
+            android:parentActivityName=".activities.MainActivity" />
 
         <activity
-            android:name=".activities.AboutActivity" />
+            android:name=".activities.AboutActivity"
+            android:parentActivityName=".activities.MainActivity" />
 
     </application>
 
